--- a/noruen-macosx.yml
+++ b/noruen-macosx.yml
@@ -113,6 +113,7 @@ dependencies:
 - simplegeneric=0.8.1=py35_1
 - theano=0.9.0=py35_0
 - tk=8.5.18=0
+- wget=1.18=0
 - xz=5.2.2=1
 - opencv3=3.1.0=py35_0
 - tbb=4.3_20141023=0
