--- a/noruen-GNU-Linux.yml
+++ b/noruen-GNU-Linux.yml
@@ -1,89 +1,143 @@
 name: corsoDLnoruen
 channels:
-- conda-forge
 - menpo
+- conda-forge
 - defaults
 dependencies:
-- h5py=2.6.0=np112py35_7
-- keras=2.0.2=py35_0
-- protobuf=3.2.0=py35_0
-- pyyaml=3.12=py35_0
-- tensorflow=1.0.0=py35_0
-- yaml=0.1.6=0
+- asn1crypto=0.22.0=py35_0
+- bkcharts=0.2=py35_0
 - bleach=1.5.0=py35_0
+- bokeh=0.12.6=py35_0
+- certifi=2017.7.27.1=py35_0
+- cffi=1.10.0=py35_0
+- chardet=3.0.2=py35_1
+- click=6.7=py35_0
+- cloudpickle=0.3.1=py35_0
+- cryptography=1.9=py35_0
 - cycler=0.10.0=py35_0
+- dask=0.15.1=py35_0
+- dbus=1.10.10=3
 - decorator=4.0.11=py35_0
+- distributed=1.18.0=py35_0
 - entrypoints=0.2.2=py35_1
-- freetype=2.5.5=2
-- hdf5=1.8.17=1
+- expat=2.2.1=0
+- gettext=0.19.7=1
+- glib=2.51.4=0
+- gmp=6.1.2=0
+- gst-plugins-base=1.8.0=0
+- gstreamer=1.8.0=2
+- h5py=2.6.0=np112py35_7
+- heapdict=1.0.0=py35_0
 - html5lib=0.999=py35_0
-- icu=54.1=0
+- idna=2.5=py35_0
 - ipykernel=4.5.2=py35_0
 - ipython=5.3.0=py35_0
 - ipython_genutils=0.1.0=py35_0
 - ipywidgets=6.0.0=py35_0
 - jbig=2.1=0
 - jinja2=2.9.5=py35_0
-- jpeg
+- jpeg=9b=0
 - jsonschema=2.5.1=py35_0
-- jupyter=1.0.0=py35_3
 - jupyter_client=5.0.0=py35_0
 - jupyter_console=5.1.0=py35_0
 - jupyter_core=4.3.0=py35_0
-- libpng=1.6.27=0
-- libtiff=4.0.6=3
-- markupsafe=0.23=py35_2
-- matplotlib=2.0.0=np112py35_0
+- keras=2.0.2=py35_0
+- libffi=3.2.1=3
+- libgpuarray=0.6.9=0
+- libiconv=1.14=4
+- libsodium=1.0.10=0
+- libxcb=1.12=1
+- locket=0.2.0=py35_1
+- mako=1.0.7=py35_0
 - mistune=0.7.4=py35_0
-- mkl=2017.0.1=0
 - mock=2.0.0=py35_0
+- msgpack-python=0.4.8=py35_0
 - nbconvert=5.1.1=py35_0
 - nbformat=4.3.0=py35_0
+- ncurses=5.9=10
 - networkx=1.11=py35_0
 - notebook=4.4.1=py35_0
-- numpy=1.12.0=py35_0
 - olefile=0.44=py35_0
-- openssl=1.0.2k=1
 - pandas=0.19.2=np112py35_1
+- pandoc=1.19.2=0
 - pandocfilters=1.4.1=py35_0
-- path.py=10.1=py35_0
+- partd=0.3.8=py35_0
 - pbr=1.10.0=py35_0
+- pcre=8.39=0
 - pexpect=4.2.1=py35_0
-- pickleshare=0.7.4=py35_0
-- pillow=4.0.0=py35_1
-- pip=9.0.1=py35_1
 - prompt_toolkit=1.0.13=py35_0
+- protobuf=3.2.0=py35_0
+- psutil=5.2.1=py35_0
 - ptyprocess=0.5.1=py35_0
+- pycparser=2.18=py35_0
 - pygments=2.2.0=py35_0
-- pyparsing=2.1.4=py35_0
+- pygpu=0.6.9=np112py35_0
+- pyopenssl=16.2.0=py35_0
 - pyqt=5.6.0=py35_2
+- pysocks=1.6.7=py35_0
 - python=3.5.3=1
 - python-dateutil=2.6.0=py35_0
 - pytz=2016.10=py35_0
+- pyyaml=3.12=py35_0
 - pyzmq=16.0.2=py35_0
-- qt
-- qtconsole=4.2.1=py35_1
-- readline=6.2=2
+- requests=2.18.2=py35_0
 - scikit-image=0.12.3=np112py35_1
-- scikit-learn=0.18.1=np112py35_1
-- scipy=0.19.0=np112py35_0
 - setuptools=27.2.0=py35_0
-- simplegeneric=0.8.1=py35_1
 - sip=4.18=py35_0
 - six=1.10.0=py35_0
+- sortedcontainers=1.5.3=py35_0
 - sqlite=3.13.0=0
+- tbb=2017_20170604=1
+- tblib=1.3.2=py35_0
+- tensorflow=1.0.0=py35_0
 - terminado=0.6=py35_0
 - testpath=0.3=py35_0
-- tk=8.5.18=0
+- theano=0.9.0=py35_1
+- toolz=0.8.2=py35_0
 - tornado=4.4.2=py35_0
 - traitlets=4.3.2=py35_0
+- urllib3=1.21.1=py35_1
 - wcwidth=0.1.7=py35_0
+- webencodings=0.5=py35_0
 - wheel=0.29.0=py35_0
 - widgetsnbextension=2.0.0=py35_0
-- xz=5.2.2=1
+- xorg-libxau=1.0.8=3
+- xorg-libxdmcp=1.1.2=3
+- yaml=0.1.6=0
+- zeromq=4.1.5=0
+- zict=0.1.2=py35_0
 - zlib=1.2.8=3
+- bcolz=1.0.0=py35_0
+- fontconfig=2.12.1=3
+- freetype=2.5.5=2
+- hdf5=1.8.17=1
+- icu=54.1=0
+- jupyter=1.0.0=py35_3
+- libgcc=5.2.0=0
+- libgfortran=3.0.0=1
+- libpng=1.6.27=0
+- libtiff=4.0.6=3
+- libxml2=2.9.4=0
+- markupsafe=0.23=py35_2
+- matplotlib=2.0.0=np112py35_0
+- mkl=2017.0.1=0
+- mkl-service=1.1.2=py35_3
+- numpy=1.12.0=py35_0
+- openssl=1.0.2k=1
+- path.py=10.1=py35_0
+- pickleshare=0.7.4=py35_0
+- pillow=4.0.0=py35_1
+- pip=9.0.1=py35_1
+- pyparsing=2.1.4=py35_0
+- qt=5.6.2=5
+- qtconsole=4.2.1=py35_1
+- readline=6.2=2
+- scikit-learn=0.18.1=np112py35_1
+- scipy=0.19.0=np112py35_0
+- simplegeneric=0.8.1=py35_1
+- tk=8.5.18=0
+- xz=5.2.2=1
 - opencv3=3.1.0=py35_0
-- tbb
 - pip:
   - imageio==2.1.2
   - ipython-genutils==0.1.0
@@ -93,5 +147,5 @@ dependencies:
   - moviepy==0.2.2.13
   - prompt-toolkit==1.0.13
   - tqdm==4.11.2
-  - webencodings==0.5
+prefix: /home/franz/miniconda3/envs/corsoDLnoruen
 
